--- a/Занятие2/Практические_задания/task3_2/task-info.yaml
+++ b/Занятие2/Практические_задания/task3_2/task-info.yaml
@@ -4,36 +4,36 @@ files:
   visible: true
   placeholders:
   - offset: 222
-    length: 55
+    length: 16
     placeholder_text: '# TODO зафиксировать время до начала выполнения функции'
     initial_state:
       length: 55
       offset: 222
     initialized_from_dependency: false
-    selected: false
-    status: Unchecked
+    selected: true
+    status: Solved
     encrypted_possible_answer: t0 = time.time()
-  - offset: 323
-    length: 43
+  - offset: 284
+    length: 69
     placeholder_text: '# TODO зафиксировать время после выполнения'
     initial_state:
       length: 43
       offset: 323
     initialized_from_dependency: false
-    selected: false
-    status: Unchecked
+    selected: true
+    status: Solved
     encrypted_possible_answer: |-
       dt = time.time() - t0
               print(f"Функция выполнялась {dt}")
-  - offset: 484
-    length: 29
+  - offset: 471
+    length: 15
     placeholder_text: '# TODO задекорировать функцию'
     initial_state:
       length: 29
       offset: 484
     initialized_from_dependency: false
     selected: false
-    status: Unchecked
+    status: Solved
     encrypted_possible_answer: '@time_decorator'
   text: |
     import time
@@ -71,6 +71,6 @@ files:
 - name: __init__.py
   visible: false
   learner_created: false
-status: Unchecked
+status: Solved
 record: -1
 post_submission_on_open: true
