--- a/Занятие2/Лабораторные_задания/task3_4/task-info.yaml
+++ b/Занятие2/Лабораторные_задания/task3_4/task-info.yaml
@@ -11,8 +11,8 @@ files:
       length: 67
       offset: 54
     initialized_from_dependency: false
-    selected: false
-    status: Unchecked
+    selected: true
+    status: Solved
     encrypted_possible_answer: |-
       result = fn()
               result = result.upper()
@@ -40,5 +40,8 @@ files:
   text: |
     HELLO, WORLD!!!
   learner_created: false
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: Tue, 16 Nov 2021 17:44:23 UTC
 record: -1
