--- a/Занятие4/Практические_задания/task1_4/task-info.yaml
+++ b/Занятие4/Практические_задания/task1_4/task-info.yaml
@@ -4,14 +4,14 @@ files:
   visible: true
   placeholders:
   - offset: 144
-    length: 66
+    length: 114
     placeholder_text: '...)  # TODO записать регулярное выражение с именованными группами'
     initial_state:
       length: 66
       offset: 144
     initialized_from_dependency: false
-    selected: false
-    status: Unchecked
+    selected: true
+    status: Failed
     encrypted_possible_answer: r"(?P<day>\d\d)-(?P<mounth>\d\d)-(?P<year>\d\d\d\d)")
   text: |
     import re
@@ -42,5 +42,22 @@ files:
     {'day': '12', 'mounth': '01', 'year': '2009'}
     ------
   learner_created: false
-status: Unchecked
+status: Failed
+feedback:
+  message: Incorrect
+  time: Tue, 30 Nov 2021 16:07:13 UTC
+  expected: |
+    {'day': '12', 'mounth': '05', 'year': '2007'}
+    ------
+    {'day': '11', 'mounth': '11', 'year': '2011'}
+    ------
+    {'day': '12', 'mounth': '01', 'year': '2009'}
+    ------
+  actual: |
+    {'day': '12', 'month': '05', 'year': '2007'}
+    ------
+    {'day': '11', 'month': '11', 'year': '2011'}
+    ------
+    {'day': '12', 'month': '01', 'year': '2009'}
+    ------
 record: -1
